--- a/public/styles.css
+++ b/public/styles.css
@@ -24,7 +24,6 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 200px;
   background-color: #ccc;
   color: black;
   text-align: center;
@@ -52,4 +51,63 @@ h1 {
   display: inline-block;
   vertical-align: middle;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Estilos generales*/
+body {
+    background-color: #f3f3f3;
+    background-image: radial-gradient(#d2d2d2 1.05px, #f3f3f3 1.05px);
+    background-size: 21px 21px;
+    opacity: 0.7;
+}
+
+/* Estilo para el formulario */
+#formularioDatos {
+    margin: 20px; 
+    padding: 10px;
+    background-color: #ffffff;
+    border-radius: 10px; /* Bordes redondos */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+.form-title, h3 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.curso-section {
+    margin-bottom: 20px; /* Margen inferior entre secciones */
+}
+
+/* Estilo para las etiquetas de entrada */
+.curso-section label {
+    margin-right: 10px;
+}
+
+/* Estilo para los inputs */
+.input-num-asignaturas, .notas-asignaturas input {
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 50px;
+}
+
+/* Estilo para la sección de notas de asignaturas */
+.notas-asignaturas {
+    margin-top: 10px;
+    padding-left: 20px; /*Tabulación */
+}
+
+/* Estilo para cada fila de asignatura */
+.notas-asignaturas label {
+    display: inline-block;
+    width: 150px;
+}
+
 
