Mejoras en la visualización del gráfico. Número decimales. Mejoras frontend

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,8 @@ html,
 body {
   height: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   font-family: "inter", sans-serif;
 }
 
@@ -10,26 +12,23 @@ body {
   background-image: radial-gradient(#d2d2d2 1.05px, #f3f3f3 1.05px);
   background-size: 21px 21px;
   opacity: 0.7;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
 }
 
 .content {
   flex: 1;
-  padding-bottom: 200px;
-  box-sizing: border-box;
+  padding-bottom: 10px;
+  /*box-sizing: border-box;*/
 }
 
 .footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #ccc;
   color: black;
   text-align: center;
-  padding: 20px;
+  padding: 1px;
   box-sizing: border-box;
-  z-index: 1000; /* Para que el footer esté por encima de todo */
 }
 
 h1 {
@@ -43,28 +42,13 @@ h1 {
   vertical-align: middle;
   margin-right: 5px;
   font-size: 20px;
-  margin-left: 200px;
+  margin-left: 172px;
 }
 
 .select-options, .select-options option {
   font-size: 18px;
   display: inline-block;
   vertical-align: middle;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-/* Estilos generales*/
-body {
-    background-color: #f3f3f3;
-    background-image: radial-gradient(#d2d2d2 1.05px, #f3f3f3 1.05px);
-    background-size: 21px 21px;
-    opacity: 0.7;
 }
 
 /* Estilo para el formulario */
@@ -181,6 +165,21 @@ body {
     color: #007bb5;
   }
 
-  .grafico {
-    margin: 20px;
+  .grafico-container {
+    display: flex;
+    justify-content: center; 
+    padding: 0 30px; 
+    box-sizing: border-box;
   }
+
+.grafico {
+  display: block;
+  margin: 0 auto; 
+  padding: 0; 
+  max-width: calc(100% - 60px); 
+  width: 70%; 
+  height: auto; 
+  box-sizing: border-box; 
+}
+
+
