--- a/public/styles.css
+++ b/public/styles.css
@@ -33,7 +33,7 @@ body {
 
 h1 {
   /*text-align: center;*/
-  margin-left: 200px;
+  margin-left: 100px;
 }
 
 .form-title {
@@ -42,7 +42,7 @@ h1 {
   vertical-align: middle;
   margin-right: 5px;
   font-size: 20px;
-  margin-left: 172px;
+  margin-left: 71px;
 }
 
 .select-options, .select-options option {
@@ -60,14 +60,18 @@ h1 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
 }
 
-.form-title, h3 {
+.form-title {
     margin-bottom: 10px;
-    font-size: 16px;
+    font-size: 20px;
+    margin-left: 70px;
     font-weight: bold;
 }
 
+
+
 .curso-section {
     margin-bottom: 20px; /* Margen inferior entre secciones */
+    margin-left: 110px;
 }
 
 /* Estilo para las etiquetas de entrada */
@@ -92,6 +96,14 @@ h1 {
 .notas-asignaturas label {
     display: inline-block;
     width: 150px;
+}
+
+.asignatura-label {
+  margin-left: 80px;
+}
+
+.nota-label {
+  margin-left: 150px;
 }
 
 
@@ -181,5 +193,6 @@ h1 {
   height: auto; 
   box-sizing: border-box; 
 }
+
 
 
